--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "description": "PHP LetsEncrypt client library for ACME v2",
     "license": "MIT",
     "require": {
-        "php": ">=5.2"
+        "php": ">=5.2",
+        "ext-curl": "*",
+        "ext-openssl": "*",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
